web/src/stylesheets/default/pages/page--goals.scss
/* ... */
.printpage {
	position: absolute;
	right: -.25rem;
	top: 5.15rem;
	z-index: 99;

	a {
		color: transparent;
		text-decoration: none;
		height: 2.75rem;
		padding: .5rem;
		display: block;

		&::before {
			content: '\f02f';
			font-family: FontAwesome;
			color: $color-app-brand;
			font-size: 1.15rem;
			display: block;
		}
	}

}

.alignment {
	display: flex;
	flex-flow: column nowrap;
	flex: 1 1 30%;
	border-top: 1px solid #ddd;
	border-left: none;
	margin: 0 0 1rem 1rem;
	text-align: center;
	padding-top: 2.5rem;
	position: relative;

	.alignment-header {
		margin-bottom: 1.25rem;
		font-weight: 300;
		font-size: 1.75rem;
		color: $color-app-grey;
	}

	.card {
		user-select: none;
		cursor: pointer;
		background: lighten($color-app-light-grey, 15%);
		color: $color-white;
		border: 1px solid darken($color-app-light-grey, 5%);
		margin: 1.5rem auto 0;
		width: 75%;
		font-size: 1.75rem;
		font-weight: 400;
		line-height: 2.5rem;

		.face {

		}

		.card-block {
			padding: 3rem 2rem;
			min-height: 17rem;
			display: flex;
			flex: 1;
			align-items: center;
			justify-content: center;
			width: 100%;
			flex-flow: column nowrap;

			.fa-info-circle {
				&::before {
					font-size: 60%;
					margin-left: .5rem;
					vertical-align: middle;
				}
			}

			.predicted-ev {
				font-size: 1rem;
				line-height: 1.25;
				font-weight: 300;
				margin-top: .5rem;
				&::before {
					content: '(';
				}
				&::after {
					content: ')';
				}
				label {
					margin-bottom: 0;
					display: inline;
					&::after {
						content: ':';
						padding-right: 5px;
					}
				}
				span.val {
					font-weight: 400;
				}
			}

		}

		+ .card {
			margin-top: 2rem;
		}

		&.primary {
			background: $color-app-light-grey;
			border: 1px solid darken($color-app-light-grey, 5%);
			box-shadow: 0 0 19px rgba(42, 53, 66, 0.7);

			.face {
				background: $color-app-light-grey;
				//border: 1px solid darken($color-app-light-grey, 5%);
			}

		}

	}

	.personal-alignment-graph {
		position: relative;
	}

	.info.message {
		font-size: 1rem;
	}

}

.message-container {
	.message .message-actions {
		margin-left: .5rem;
	}
}

.goal-wrapper {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	flex-direction: row;
	padding: 1rem;
	flex: 1;

	.goal-info-wrapper, .goal-measurement {
		display: flex;
	}

	.goal-info-wrapper {
		flex: 1;
		flex-direction: row;
		flex-wrap: wrap;
		font-size: 85%;
	}

	> .goal-measurement {
		text-align: center;
		flex-flow: row wrap;
		flex: 2;

		.goal-measurement {
			align-self: center;
			flex: 1 0 100%;
		}

	}

	.goal-measurement-actions {
		margin: 0 0 1.5rem;
		width: 100%;
	}

	.measure-info, .measure-metric-info {
		padding: 0 1rem;
		text-align: left;

		.prop {
			margin-bottom: 5px;
			line-height: 1.5;
		}

		label {
			margin-bottom: 0;
		}

	}

	.measure-info {
		flex: 1 0 35%;
		padding: 0 1rem 0 3rem;
	}

	.measure-metric-info {
		flex: 1 0 0;
		padding: 0 1rem;
	}

	.description, .start-date, .end-date, .goal-ev {

		label {
			display: block;
			font-weight: 400;
			padding-right: 1ch;
			margin-bottom: 0;
			&:after {
				content: ": ";
			}
		}

		div.val {
			display: inline-block;
		}

	}

	.financial-values-wrapper {
		flex: 1 0 100%;

		&:empty {
			flex: 0;
		}
	}

	.goal-ev {
		flex: 2 0 100%;
		width: 100%;
		padding-bottom: 1.5rem;

		.val.how {
			font-style: italic;
			margin-left: 5px;
			font-size: .8rem;
			display: inline;

			&::before {
				content: '-';
				padding-right: 5px;
			}
		}
	}

	.description {
		flex: 2 1 100%;
		order: 4;
		width: 100%;
		padding: 1.5rem 3rem 1.5rem 0;
	}

	.start-date, .end-date {
		flex: 1 0 50%;
		//font-size: 85%;
	}

	.measure-config-graph {
		margin: 0 auto;
		position: relative;
	}
	.config-graph {
		//position: relative;
		margin: 0 auto;
	}
	.config-graph-text {
		position: absolute;
		top: calc(50% - 40px);
		bottom: 0;
		left: 0;
		right: 0;
		font-size: 3rem;
		font-weight: 400;
		color: $brand-primary;
	}
	.smart-guage-wrapper {
		display: flex;
		flex: 1 0 100%;
		justify-content: flex-start;
		padding-bottom: 3rem;
		order: 5;
		margin-top: 1rem;
	}

	//CAROUSEL
	.carousel-indicators {
		display: none;
	}

	.carousel-control-prev, .carousel-control-next {
		background-image: none;
		text-shadow: none;

		.carousel-control-next-icon, .carousel-control-prev-icon {
			color: $color-app-grey;
			font-size: 4rem;
			margin-top: -4rem;
			height: 4rem;
		}

	}

	.carousel-inner {

		.config-graph {
			canvas {
				max-width: 100%;
				max-height: 100%;
			}
		}

		.carousel-caption {
			position: relative;
			bottom: auto;
			left: auto;
			right: auto;
			color: $color-app-light-grey;
			text-shadow: none;
			padding: 1rem 0;

			p {
				font-size: 1.25rem;
				font-weight: 500;
				margin-bottom: 0;
			}

		}

	}

}

.chart-legend {
	//float:left;
	min-width: 8rem;

	.legend-header {
		color: $color-app-grey;
		font-weight: 300;
		margin-bottom: .25rem;
		font-size: 1rem;
	}

	ul {
		list-style: none;
		margin-left: 0;
		padding-left: 0;

		&:not(.radar-legend) {
			text-align: left;
		}

	}

	li {
		padding: 0;
		margin: 0 0 .25rem;
		font-size: .75rem;
		span {
			display: inline-block;
			width: 12px;
			height: 12px;
			margin-right: 5px;
			border-radius: 100%;

			&.segment-label,
			&.segment-value {
				width: auto;
				height: auto;
				display: inline;
			}

			&.segment-label {
				&::after {
					content: ':';
					padding-right: 3px;
				}
			}

			&.legend-label {
				width: auto;
			}

			&.aligned {
				font-weight: 500;
				font-size: 1.25rem;
				color: $color-app-grey;
			}

		}
	}
}
/* ... */

